@@ -1,18 +1,18 @@
 <?xml version='1.0' standalone='yes'?>
 <extensions>
-  <targetApplication>
-    <minVersion>7.7</minVersion>
-    <maxVersion>*</maxVersion>
-    <id>SqueezeCenter</id>
-  </targetApplication>
   <version>0.2.3</version>
   <type>2</type>
-  <name>PLUGIN_GROUPS_NAME</name>
-  <id></id>
+  <description>PLUGIN_GROUPS_DESC</description>
   <defaultState>enabled</defaultState>
   <email>philippe_44@outlook</email>
+  <id></id>
+  <name>PLUGIN_GROUPS_NAME</name>
   <optionsURL>plugins/Groups/settings/basic.html</optionsURL>
-  <creator>philippe_44</creator>
   <module>Plugins::Groups::Plugin</module>
-  <description>PLUGIN_GROUPS_DESC</description>
+  <targetApplication>
+    <id>SqueezeCenter</id>
+    <maxVersion>*</maxVersion>
+    <minVersion>7.7</minVersion>
+  </targetApplication>
+  <creator>philippe_44</creator>
 </extensions>
