@@ -1,17 +1,17 @@
 <?xml version='1.0' standalone='yes'?>
 <extensions>
-  <details>
-    <title lang="EN">Philippe's Group Players plugin - development</title>
-  </details>
   <plugins>
-    <plugin version="0.2.3" maxTarget="7.*" minTarget="7.7" name="Groups">
+    <plugin name="Groups" version="0.2.3" minTarget="7.7" maxTarget="7.*">
       <url>http://downloads.sourceforge.net/project/lms-groups/dev/Groups-0.2.3.zip</url>
       <link>http://github.com/philippe44/LMS-Groups</link>
-      <sha>46f900e0e87eaeec33e2ad8bb3d5047abd9b93f3</sha>
+      <sha>d21e5db76ecfdf4c0fe814d4bc2d88f9a3573032</sha>
+      <title lang="EN">Group Players</title>
       <email>philippe_44@outlook.com</email>
       <creator>Philippe</creator>
       <desc lang="EN">on-the-fly group creation</desc>
-      <title lang="EN">Group Players</title>
     </plugin>
   </plugins>
+  <details>
+    <title lang="EN">Philippe's Group Players plugin - development</title>
+  </details>
 </extensions>
